# magnet_v2_description

./: CMakeLists.txt  README.md  ReadMe.md  ethernet board holder v2.STL  heatsink lidar v2.STL  package.xml  top case v3.STL
baseplate_and_cage/: CMakeLists.txt  package.xml
launch/: description.launch  description.launch.py  visualize.launch  visualize.launch.py
meshes/E-Con-Camera_eCAM_urdf/: CMakeLists.txt  package.xml
meshes/E-Con-Camera_eCAM_urdf/launch/: display.launch  gazebo.launch
meshes/E-Con-Camera_eCAM_urdf/urdf/: E-Con-Camera_eCAM_urdf.csv  E-Con-Camera_eCAM_urdf.urdf
meshes/baseplate_and_cage/: package.xml
meshes/baseplate_and_cage/launch/: display.launch  gazebo.launch
meshes/baseplate_and_cage/meshes/: baseplate_and_cage.STL
meshes/baseplate_and_cage/urdf/: baseplate_and_cage.csv  baseplate_and_cage.urdf
meshes/magnet_ v2_heatsink_and_case/: CMakeLists.txt  package.xml
meshes/magnet_ v2_heatsink_and_case/launch/: display.launch  gazebo.launch
meshes/magnet_ v2_heatsink_and_case/meshes/: magnet_v2_heatsink_and_case.STL
meshes/magnet_ v2_heatsink_and_case/urdf/: magnet_ v2_heatsink_and_case.csv  magnet_ v2_heatsink_and_case.urdf
meshes/visual/: bottom case v3.STL  eCon_cam_Base.STL  heatsink.stl
rviz/: model.rviz
urdf/: magnet.urdf.xacro  magnet_v2.urdf.xacro  standalone.urdf.xacro
