<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>magnet_v2_description</name>
  <version>0.0.1</version>
  <description>Description for Magnet v2 mapping device</description>
  <maintainer email="matthewgraham@robots.ox.ac.uk">Matthew Graham</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hesai_description</exec_depend>
  <exec_depend>microstrain_inertial_description</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
