<?xml version="1.0"?>
<package format="2">
  <name>magnet_v2_description</name>
  <version>0.0.1</version>
  <description>Description for Magnet v2 mapping device</description>

  <maintainer email="matthewgraham@robots.ox.ac.uk">Matthew Graham</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>hesai_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>

  <!-- Add this back only if you actually have this package available in ROS1 -->
  <exec_depend>microstrain_inertial_description</exec_depend>
</package>